Fix wrong font size of the comment submit button && Change trigger of the paper show fixed navbar logic.

--- a/app/components/paperShow/paperShow.scss
+++ b/app/components/paperShow/paperShow.scss
@@ -41,6 +41,7 @@
     margin-right: 0;
     color: white;
     background-color: $royal_blue1;
+    font-size: 14px;
     cursor: pointer;
   }
 
